# chip8-cpp

./: .gitignore  CMakeLists.txt  Chip.cpp  Chip.h  ChipConfig.cpp  ChipConfig.h  Display.cpp  Display.h  Host.cpp  Host.h  Makefile  font.h  main.cpp
Configs/: common.txt
Hosts/: HostGraphic.cpp  HostGraphic.h  HostText.cpp  HostText.h
Hosts/3ds/: Host3ds.cpp  Host3ds.h
Programs/: slipperyslope.ch8
gfx/: keypad.t3s
